Fix font on mobile

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -27,4 +27,5 @@ textarea {
   word-wrap: normal;
   overflow: auto;
   overflow-y: hidden;
+  font-family: monospace;
 }
